--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,3 +1,10 @@
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
 .cabecalho {
     display: flex;
     justify-content: center;
