--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url(img-background.css);
 @import url(cabecalho.css);
 @import url(conteudo.css);
+@import url(roda-pe.css);
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   
   }
+  
 
