--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -19,9 +19,17 @@
     margin-bottom: 40px;
   }
   
+  .btn {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 16px;
+  } 
   
   /* Estilos da seção features */
-  .card {
+  .cards {
     display: flex;
     justify-content: center;
     align-items: center;
