resumo dos conteudo alterados

--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -1,6 +1,6 @@
 
 /* Estilos da seção hero */
-.conteudo {
+.conteudo-back   {
     background-image: url('../img/trigo.jpg');
     background-size: cover;
     background-position: center;
