--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -8,6 +8,17 @@
     text-align: center;
     padding: 100px 0;
   }
+
+  .conteudo-back2   {
+    background-image: url('../img/agricultura-background.jpg');
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    text-align: center;
+    padding: 100px 0;
+  }
+
+  
   
   .conteudo {
     padding: 50px 210px;
@@ -15,7 +26,17 @@
 
   }
 
-  .conteudo h2 {
+.conteudo h2{
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+  .conteudo-back h1 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+
+  .conteudo-back2 h1 {
     font-size: 40px;
     margin-bottom: 20px;
   }
@@ -54,7 +75,7 @@
     margin-bottom: 20px;
   }
   .testimonial {
-    background-color: #f8f8f8;
+    background-color: #113a0f;
     padding: 100px 0;
     text-align: center;
   }
@@ -62,6 +83,7 @@
   .testimonial blockquote {
     font-style: italic;
     margin-bottom: 20px;
+    color: #fff;
   }
   
   .testimonial blockquote p {
