--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -18,6 +18,14 @@
     padding: 100px 0;
   }
 
+  .conteudo-back3  {
+    background-image: url('../img/ai-cloud-concept-with-robot-head.jpg');
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    text-align: center;
+    padding: 100px 0;
+  }
   
   
   .conteudo {
