--- a/css/formulario.css
+++ b/css/formulario.css
@@ -4,3 +4,31 @@
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
   }
+
+  body{
+    height: 100vh;
+    width: 100%;
+  }
+  
+  .container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 100px;
+  }
+  
+  .container:after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: url("https://i.ibb.co/z4wgBG3/bgg-min.jpg") no-repeat center;
+    background-size: cover;
+    filter: blur(50px);
+    z-index: -1;
+  }
