--- a/css/formulario.css
+++ b/css/formulario.css
@@ -32,3 +32,14 @@
     filter: blur(50px);
     z-index: -1;
   }
+
+  .contact-box{
+    max-width: 850px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+  }
