--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(cabecalho.css);
 @import url(conteudo.css);
 @import url(roda-pe.css);
+@import url(formulario.css);
 * {
     margin: 0;
     padding: 0;
