--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,14 @@
   .conteudo-back h1 {
     font-size: 40px;
     margin-bottom: 20px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  }
+
+  .conteudo-back p {
+    color: #fff;
+    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
   }
 
   .conteudo-back .btn {
