--- a/css/formulario.css
+++ b/css/formulario.css
@@ -58,6 +58,7 @@
     position: relative;
     padding: 0 0 10px;
     margin-bottom: 10px;
+    color: black;
   }
   
   h2:after{
@@ -79,6 +80,7 @@
     background-color: rgba(230, 230, 230, 0.6);
     padding: 0.5rem 1rem;
     font-size: 1.1rem;
+    color: black;
     margin-bottom: 22px;
     transition: .3s;
   }
