--- a/css/roda-pe.css
+++ b/css/roda-pe.css
@@ -3,7 +3,7 @@
     color: #fff;
     padding: 20px;
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
   }
@@ -12,7 +12,7 @@
     color: #fff;
     padding: 20px;
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     
